--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/images/image.png" alt="Logo">
+            <img src="/images/image.PNG" alt="Logo">
             <h1>ACTIVE EDGE</h1>
         </div>
         <nav>
@@ -41,7 +41,7 @@
                 <h1>Elevate Performance with Nutrition & Massage.</h1>
                 <p>Experience the transformative power of active wellness at Active Edge - Nutrition & Massage. As your dedicated health expert, I use my academic knowledge and practical experience to provide tailored nutrition consultations and sports massage therapy. With an integrated approach to health and fitness, I'm here to help athletes and fitness enthusiasts unleash and optimize their performance. At Active Edge, we go beyond consultation - your fitness achievements are our focus. Start your journey to better performance, health and wellbeing with me today.</p>
             </div>
-            <img src="/images/tom_profile_pic.png" alt="Tom providing services">
+            <img src="/images/tom_profile_pic.PNG" alt="Tom providing services">
         </section>
     </section>
     <section>
