--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript">
       window.onload = function () {
         document
-          .getElementById("contact-form")
+          .getElementById("myform")
           .addEventListener("submit", function (event) {
             event.preventDefault();
             // these IDs from the previous steps
