--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <input
           type="text"
           id="name"
-          name="name"
+          name="user_name"
           placeholder="Your Name"
           required
         />
@@ -68,7 +68,7 @@
         <input
           type="email"
           id="email"
-          name="email"
+          name="user_email"
           placeholder="example@email.co.uk"
           required
         />
