added services page

--- a/services.html
+++ b/services.html
@@ -23,5 +23,14 @@
         </ul>
       </nav>
     </header>
+
+    <div class="services-container">
+      <h1>Services Offered</h1>
+      <ul class="services-list">
+        <!-- Services will be dynamically added here -->
+      </ul>
+    </div>
+
+    <script src="services.js"></script>
   </body>
 </html>
