--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h1 class="">Ready to build something awesome?</h1>
       <h2>NUTRITION & MASSAGE</h2>
       <p class="formp">
-        Let's Boost Your Performance Together! Connect with us to learn more.
+        Let's Boost Your Performance Together! Connect with me to learn more.
       </p>
       <form id="myForm">
         <input type="hidden" name="contact_number" value="697483" />
