--- a/learn.html
+++ b/learn.html
@@ -8,20 +8,40 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><div class="logo">
-          <img src="./images/image.png" alt="Logo" />
-          <h1>ACTIVE EDGE</h1>
-        </div>
-      </a>
-      <nav>
-        <ul>
-          <li><a href="index.html#about-section">About</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="learn.html">Learn</a></li>
-          <li><a href="index.html">Contact/Booking</a></li>
-        </ul>
-      </nav>
+      <!-- Desktop Nav -->
+      <div class="desktop-nav">
+        <a href="index.html">
+          <div class="logo">
+            <img src="./images/image.png" alt="Logo" />
+            <h1>ACTIVE EDGE</h1>
+          </div>
+        </a>
+        <nav>
+          <ul>
+            <li><a href="index.html#about-section">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="learn.html">Learn</a></li>
+            <li><a href="index.html">Contact/Booking</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <!-- Mobile Nav -->
+      <div class="mobile-nav">
+        <input type="checkbox" id="toggle-menu" />
+        <label for="toggle-menu" class="hamburger-menu">
+          <img src="./images/image.png" alt="Menu" />
+        </label>
+        <nav>
+          <ul>
+            <li><a href="index.html#about-section">About</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="learn.html">Learn</a></li>
+            <li><a href="index.html">Contact/Booking</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
+    <script src="index.js"></script>
   </body>
 </html>
