Nav bar styling added

--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
       <div class="mobile-nav">
         <input type="checkbox" id="toggle-menu" />
         <label for="toggle-menu" class="hamburger-menu">
-          <img src="hamburger-icon.png" alt="Menu" />
+          <img src="./images/image.png" alt="Menu" />
         </label>
         <nav>
           <ul>
