--- a/learn.html
+++ b/learn.html
@@ -42,6 +42,6 @@
         </nav>
       </div>
     </header>
-    <script src="index.js"></script>
+    <script src="learn.js"></script>
   </body>
 </html>
