add hurtful comments

--- a/index.html
+++ b/index.html
@@ -56,9 +56,11 @@
 
       <!-- Mobile Nav -->
       <div class="mobile-nav">
-        <input type="checkbox" id="toggle-menu" />
+        <input type="checkbox" id="toggle-menu" /> 
+        <!--change checkbox maybe? -->
         <label for="toggle-menu" class="hamburger-menu">
-          <img src="./images/image.png" alt="Menu" />
+          <img src="./images/image.png" alt="Menu" /> 
+          <!-- invert logo to white, add black background with rounded edges? -->
         </label>
         <nav>
           <ul>
@@ -71,9 +73,12 @@
       </div>
     </header>
 
-    <section class="formsection">
+    <section class="formsection"> 
+      <!--change text style for both labels and inputs?-->
       <h1 class="">Ready to build something awesome?</h1>
-      <h2>NUTRITION & MASSAGE</h2>
+      <!--background from current colour -> 1/3 way into footer colour? -->
+      <h2>NUTRITION & MASSAGE</h2> 
+      <!--orange for h2? -->
       <p class="formp">
         Let's Boost Your Performance Together! Connect with me to learn more.
       </p>
@@ -105,11 +110,13 @@
         <button type="submit">Submit</button>
       </form>
     </section>
-    <section class="flex-container">
+    <section class="flex-container"> 
+      <!--background from current colour -> 1/3 way into footer colour? -->
       <section class="hero" id="about-section">
         <div class="hero-text">
           <h1>Elevate Performance with Nutrition & Massage</h1>
-          <h2>Welcome to the world of active wellness at Active Edge</h2>
+          <h2>Welcome to the world of active wellness at Active Edge</h2> 
+          <!--orange for h2? -->
           <p>
             I'm Tom. As your dedicated health expert, I use my academic
             knowledge and practical experience to provide tailored nutrition
@@ -121,10 +128,13 @@
             wellbeing with me today
           </p>
         </div>
-        <img src="./images/tom_profile_pic.png" alt="Tom providing services" />
+        <img src="./images/tom_profile_pic.png" alt="Tom providing services" /> 
+        <!--img doesnt scale correctly, make block display under 1800px? -->
       </section>
     </section>
-    <section class="carouselwrapper">
+    <section class="carouselwrapper"> 
+      <!--change certs to high quality scan rather than photo? -->
+      <!--on mobile blue hover applied on buttons on click, change? -->
       <div
         id="carousel-1"
         class="carousel"
