--- a/services.html
+++ b/services.html
@@ -29,8 +29,10 @@
       <!-- Mobile Nav -->
       <div class="mobile-nav">
         <input type="checkbox" id="toggle-menu" />
+        <!--change checkbox maybe? -->
         <label for="toggle-menu" class="hamburger-menu">
           <img src="./images/image.png" alt="Menu" />
+          <!-- invert logo to white, add black background with rounded edges? -->
         </label>
         <nav>
           <ul>
@@ -47,6 +49,15 @@
       <h1>Services Offered</h1>
       <ul class="services-list">
         <!-- Services will be dynamically added here -->
+        
+        <!--service-card class add padding 0.2rem? -->
+        <!--add class to serviceHeaders -->
+        <!--services header to orange? -->
+        <!--services header 0.1/0.5rem margin top? -->
+        <!--add class to servicePara -->
+        <!--servicePara 0.1/0.5rem margin top? -->
+        <!--add class to serviceButton -->
+        <!--serviceButton 0.1/0.5rem margin top + bot? -->
       </ul>
     </div>
 
