--- a/index.html
+++ b/index.html
@@ -9,30 +9,6 @@
       type="text/javascript"
       src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"
     ></script>
-
-    <script>
-      (function () {
-        emailjs.init("ZL0FQgT4P4TyeaNL4");
-      })();
-    </script>
-    <script type="text/javascript">
-      window.onload = function () {
-        document
-          .getElementById("myForm")
-          .addEventListener("submit", function (event) {
-            event.preventDefault();
-            // these IDs from the previous steps
-            emailjs.sendForm("contact_service", "contact_form", this).then(
-              () => {
-                console.log("SUCCESS!");
-              },
-              (error) => {
-                console.log("FAILED...", error);
-              }
-            );
-          });
-      };
-    </script>
   </head>
   <body>
     <header>
@@ -77,8 +53,12 @@
       <p class="formp">
         Let's Boost Your Performance Together! Connect with me to learn more.
       </p>
-      <form id="myForm">
-        <input type="hidden" name="contact_number" value="697483" />
+      <form action="https://api.web3forms.com/submit" method="POST" id="myForm">
+        <input
+          type="hidden"
+          name="access_key"
+          value="b79cd4a4-3262-43b9-a677-a71fafde3479"
+        />
         <label for="name">Name:</label>
         <input
           type="text"
@@ -102,6 +82,7 @@
           placeholder="Describe your goals"
           required
         ></textarea>
+        <div class="h-captcha" data-captcha="true"></div>
         <button type="submit">Submit</button>
       </form>
     </section>
@@ -196,5 +177,6 @@
       <p>© Copyright Active Edge - Website design and build by Tom Baker</p>
     </footer>
     <script src="index.js"></script>
+    <script src="https://web3forms.com/client/script.js" async defer></script>
   </body>
 </html>
