added pdf downloads to certificates, and corrected images

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           aria-labelledby="carousel-1-slide-1-title"
         >
           <div class="slide-content">
-            <div class="slide-caption">
+            <div class="slide-caption"  onclick="downloadPDF('./images/msc_nutrition.pdf')"">
               <p>Masters in Human Nutrition</p>
             </div>
 
@@ -176,7 +176,7 @@
           aria-labelledby="carousel-1-slide-2-title"
         >
           <div class="slide-content">
-            <div class="slide-caption">
+            <div class="slide-caption"  onclick="downloadPDF('./images/sportsmassage_cert.pdf')">
               <p>Level 3 Sports Massage Therapy</p>
             </div>
             <img
@@ -194,7 +194,7 @@
           aria-labelledby="carousel-1-slide-3-title"
         >
           <div class="slide-content">
-            <div class="slide-caption">
+            <div class="slide-caption" onclick="downloadPDF('./images/pregnancy_cert.pdf')">
               <p>Diploma in Pregnancy & Postntal Massage</p>
             </div>
 
