got rid of checkbox to toggle header on mobile

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
       <!-- Mobile Nav -->
       <div class="mobile-nav">
-        <input type="checkbox" id="toggle-menu" />
+        <!-- <input type="checkbox" id="toggle-menu" /> -->
         <!--change checkbox maybe? -->
-        <label for="toggle-menu" class="hamburger-menu">
+        <label id="toggle-menu" for="toggle-menu" class="hamburger-menu">
           <img src="./images/image.png" alt="Menu" />
           <!-- invert logo to white, add black background with rounded edges? -->
         </label>
