Added burger menu

--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
         <!-- <input type="checkbox" id="toggle-menu" /> -->
         <!--change checkbox maybe? -->
         <label id="toggle-menu" for="toggle-menu" class="hamburger-menu">
-          <img src="./images/image.png" alt="Menu" />
+          <img id="menu-img" src="./images/image.png" alt="Menu" />
+          <img id="ham-img" src="./images/menu.png" alt="Menu" />
+          <img id="close-img" src="./images/close.png" alt="Menu" />
           <!-- invert logo to white, add black background with rounded edges? -->
         </label>
         <nav>
           <ul>
-            <li><a href="#about-section">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="learn.html">Learn</a></li>
-            <li><a href="index.html">Contact/Booking</a></li>
+            <li><a href="#about-section">ABOUT</a></li>
+            <li><a href="services.html">SERVICES</a></li>
+            <li><a href="learn.html">LEARN</a></li>
+            <li><a href="index.html">CONTACT/BOOKING</a></li>
           </ul>
         </nav>
       </div>
