add media queries for hero img, fix nav display

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             wellbeing with me today
           </p>
         </div>
-        <img src="./images/tom_profile_pic.png" alt="Tom providing services" />
+        <img src="./images/tom_profile_pic.png" alt="Tom providing services" id="tomImg" />
         <!--img doesnt scale correctly, make block display under 1800px? -->
       </section>
     </section>
