--- a/index.html
+++ b/index.html
@@ -117,11 +117,10 @@
       </form>
     </section>
     <section class="flex-container">
-      <!--background from current colour -> 1/3 way into footer colour? -->
-      <section class="hero" id="about-section">
+      <section class="hero headerBackground" id="about-section">
         <div class="hero-text">
           <h1>Elevate Performance with Nutrition & Massage</h1>
-          <h2>Welcome to the world of active wellness at Active Edge</h2>
+          <h2 class="headerOrange">Welcome to the world of active wellness at Active Edge</h2>
           <!--orange for h2? -->
           <p>
             I'm Tom. As your dedicated health expert, I use my academic
