--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <div class="mobile-nav">
         <label id="toggle-menu" for="toggle-menu" class="hamburger-menu">
           <img id="menu-img" src="./images/image.png" alt="Menu" />
-          <img id="ham-img" src="./images/menu.png" alt="Menu" /> <!-- sidenote: ham and close display inverted on dom and CSS on toggle -->
-          <img id="close-img" src="./images/close.png" alt="Menu" />
+          <img id="ham-img" class="toggle" src="./images/menu.png" alt="Menu" /> <!-- sidenote: ham and close display inverted on dom and CSS on toggle -->
+          <img id="close-img" class="toggle" src="./images/close.png" alt="Menu" />
           <!-- invert logo to white, add black background with rounded edges? -->
         </label>
         <nav>
