--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </div>
     </section>
     <footer>
-      <p>© Copyright Active Edge - Website design and build by Tom Baker</p>
+      <p>© Copyright Active Edge - Website design and build by Tom Baker & Harry Probert</p>
     </footer>
     <script src="index.js"></script>
     <script src="https://web3forms.com/client/script.js" async defer></script>
