hurtful comments added for future debugging

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
   <body>
     <header>
       <!-- Desktop Nav -->
+      <!-- header not central on desktop (across all pages on desktop) -->
+      <!-- about doesnt take you to main from services (only "active edge" does, and this isn't displayed on mobile) -->
       <div class="desktop-nav">
         <a href="index.html">
           <div class="logo">
@@ -56,6 +58,8 @@
       </div>
 
       <!-- Mobile Nav -->
+      <!-- about doesnt take you to main from services (only "active edge" does, and this isn't displayed on mobile) -->
+      <!-- add a home section to main page for mobile -->
       <div class="mobile-nav">
         <label id="toggle-menu" for="toggle-menu" class="hamburger-menu">
           <img id="menu-img" src="./images/image.png" alt="Menu" />
